--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>hello coursera!</title>
 </head>
 <body>
-<h1>this is itchyboy!!!!!</h1>
+<h1>this is itchyboy!!!!!the first page!!!!</h1>
 </body>
 </html>
